Removed old ng tags, Fixed header spacing
Also prevent pointer error on custom home page

--- a/resources/assets/sass/_pages.scss
+++ b/resources/assets/sass/_pages.scss
@@ -40,6 +40,9 @@
   margin: 0 auto;
   margin-top: $-xxl;
   overflow-wrap: break-word;
+  &.flex {
+    margin-top: $-m;
+  }
   .align-left {
     text-align: left;
   }
